parser/src/parser/snapshots/enderpy__parser__parser__tests__parse_bool_op-2.snap
---
source: src/parser/parser.rs
description: a and b
---
Module {
    node: Node {
        start: 0,
        end: 7,
    },
    body: [
        ExpressionStatement(
            BoolOp(
                BoolOperation {
                    node: Node {
                        start: 0,
                        end: 7,
                    },
                    op: And,
                    values: [
                        Name(
                            Name {
                                node: Node {
                                    start: 0,
                                    end: 1,
                                },
                                id: "a",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 6,
                                    end: 7,
                                },
                                id: "b",
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
