parser/src/parser/snapshots/enderpy__parser__parser__tests__parse_call-7.snap
---
source: src/parser/parser.rs
description: "func(a, b=c, d=e, *f, **g)"
---
Module {
    node: Node {
        start: 0,
        end: 26,
    },
    body: [
        ExpressionStatement(
            Call(
                Call {
                    node: Node {
                        start: 0,
                        end: 26,
                    },
                    func: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 4,
                            },
                            id: "func",
                        },
                    ),
                    args: [
                        Name(
                            Name {
                                node: Node {
                                    start: 5,
                                    end: 6,
                                },
                                id: "a",
                            },
                        ),
                        Starred(
                            Starred {
                                node: Node {
                                    start: 18,
                                    end: 19,
                                },
                                value: Name(
                                    Name {
                                        node: Node {
                                            start: 19,
                                            end: 20,
                                        },
                                        id: "f",
                                    },
                                ),
                            },
                        ),
                    ],
                    keywords: [
                        Keyword {
                            node: Node {
                                start: 8,
                                end: 11,
                            },
                            arg: Some(
                                "b",
                            ),
                            value: Name(
                                Name {
                                    node: Node {
                                        start: 10,
                                        end: 11,
                                    },
                                    id: "c",
                                },
                            ),
                        },
                        Keyword {
                            node: Node {
                                start: 13,
                                end: 16,
                            },
                            arg: Some(
                                "d",
                            ),
                            value: Name(
                                Name {
                                    node: Node {
                                        start: 15,
                                        end: 16,
                                    },
                                    id: "e",
                                },
                            ),
                        },
                        Keyword {
                            node: Node {
                                start: 22,
                                end: 24,
                            },
                            arg: None,
                            value: Name(
                                Name {
                                    node: Node {
                                        start: 24,
                                        end: 25,
                                    },
                                    id: "g",
                                },
                            ),
                        },
                    ],
                    starargs: None,
                    kwargs: None,
                },
            ),
        ),
    ],
}
