parser/src/parser/snapshots/enderpy__parser__parser__tests__parse_del_stmt-3.snap
---
source: src/parser/parser.rs
description: "del a, b, "
---
Module {
    node: Node {
        start: 0,
        end: 9,
    },
    body: [
        Delete(
            Delete {
                node: Node {
                    start: 0,
                    end: 9,
                },
                targets: [
                    Name(
                        Name {
                            node: Node {
                                start: 4,
                                end: 5,
                            },
                            id: "a",
                        },
                    ),
                    Name(
                        Name {
                            node: Node {
                                start: 7,
                                end: 8,
                            },
                            id: "b",
                        },
                    ),
                ],
            },
        ),
    ],
}
