parser/src/parser/snapshots/enderpy__parser__parser__tests__parse_del_stmt.snap
---
source: src/parser/parser.rs
description: del a
---
Module {
    node: Node {
        start: 0,
        end: 5,
    },
    body: [
        Delete(
            Delete {
                node: Node {
                    start: 0,
                    end: 5,
                },
                targets: [
                    Name(
                        Name {
                            node: Node {
                                start: 4,
                                end: 5,
                            },
                            id: "a",
                        },
                    ),
                ],
            },
        ),
    ],
}
