parser/src/parser/snapshots/enderpy__parser__parser__tests__parse_import_statement-6.snap
---
source: src/parser/parser.rs
description: from a import b
---
Module {
    node: Node {
        start: 0,
        end: 15,
    },
    body: [
        ImportFrom(
            ImportFrom {
                node: Node {
                    start: 0,
                    end: 15,
                },
                module: "a",
                names: [
                    Alias {
                        node: Node {
                            start: 14,
                            end: 15,
                        },
                        name: "b",
                        asname: None,
                    },
                ],
                level: 0,
            },
        ),
    ],
}
