parser/src/parser/snapshots/enderpy__parser__parser__tests__parse_subscript-2.snap
---
source: src/parser/parser.rs
description: "a[b:c]"
---
Module {
    node: Node {
        start: 0,
        end: 6,
    },
    body: [
        ExpressionStatement(
            Subscript(
                Subscript {
                    node: Node {
                        start: 0,
                        end: 5,
                    },
                    value: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    slice: Slice(
                        Slice {
                            node: Node {
                                start: 0,
                                end: 0,
                            },
                            lower: Some(
                                Name(
                                    Name {
                                        node: Node {
                                            start: 2,
                                            end: 3,
                                        },
                                        id: "b",
                                    },
                                ),
                            ),
                            upper: Some(
                                Name(
                                    Name {
                                        node: Node {
                                            start: 4,
                                            end: 5,
                                        },
                                        id: "c",
                                    },
                                ),
                            ),
                            step: None,
                        },
                    ),
                },
            ),
        ),
    ],
}
